# allGen

./: CMakeLists.txt  LICENSE
allgen/include/: chromosome.hpp  gene.hpp  realgene.hpp  stat.hpp
allgen/src/: chromosome.cpp  realgene.cpp  stat.cpp
